Use new GDA 9 startup scripts for B21